frontend: fix for text overflows

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -115,6 +115,11 @@ a:hover {
     text-align-last: left;
     margin: 0 0 1.2em 0;
     padding: 0;
+    text-overflow: ellipsis;
+    text-wrap: wrap;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
 }
 
 /* mobile styles */
